; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf.c_pf_state_compare_id.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf.c_pf_state_compare_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pf_state = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pf_state*, %struct.pf_state*)* @pf_state_compare_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pf_state_compare_id(%struct.pf_state* %0, %struct.pf_state* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.pf_state*, align 8
  %5 = alloca %struct.pf_state*, align 8
  store %struct.pf_state* %0, %struct.pf_state** %4, align 8
  store %struct.pf_state* %1, %struct.pf_state** %5, align 8
  %6 = load %struct.pf_state*, %struct.pf_state** %4, align 8
  %7 = getelementptr inbounds %struct.pf_state, %struct.pf_state* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load %struct.pf_state*, %struct.pf_state** %5, align 8
  %10 = getelementptr inbounds %struct.pf_state, %struct.pf_state* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp sgt i64 %8, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %42

14:                                               ; preds = %2
  %15 = load %struct.pf_state*, %struct.pf_state** %4, align 8
  %16 = getelementptr inbounds %struct.pf_state, %struct.pf_state* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load %struct.pf_state*, %struct.pf_state** %5, align 8
  %19 = getelementptr inbounds %struct.pf_state, %struct.pf_state* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = icmp slt i64 %17, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %14
  store i32 -1, i32* %3, align 4
  br label %42

23:                                               ; preds = %14
  %24 = load %struct.pf_state*, %struct.pf_state** %4, align 8
  %25 = getelementptr inbounds %struct.pf_state, %struct.pf_state* %24, i32 0, i32 1
  %26 = load i64, i64* %25, align 8
  %27 = load %struct.pf_state*, %struct.pf_state** %5, align 8
  %28 = getelementptr inbounds %struct.pf_state, %struct.pf_state* %27, i32 0, i32 1
  %29 = load i64, i64* %28, align 8
  %30 = icmp sgt i64 %26, %29
  br i1 %30, label %31, label %32

31:                                               ; preds = %23
  store i32 1, i32* %3, align 4
  br label %42

32:                                               ; preds = %23
  %33 = load %struct.pf_state*, %struct.pf_state** %4, align 8
  %34 = getelementptr inbounds %struct.pf_state, %struct.pf_state* %33, i32 0, i32 1
  %35 = load i64, i64* %34, align 8
  %36 = load %struct.pf_state*, %struct.pf_state** %5, align 8
  %37 = getelementptr inbounds %struct.pf_state, %struct.pf_state* %36, i32 0, i32 1
  %38 = load i64, i64* %37, align 8
  %39 = icmp slt i64 %35, %38
  br i1 %39, label %40, label %41

40:                                               ; preds = %32
  store i32 -1, i32* %3, align 4
  br label %42

41:                                               ; preds = %32
  store i32 0, i32* %3, align 4
  br label %42

42:                                               ; preds = %41, %40, %31, %22, %13
  %43 = load i32, i32* %3, align 4
  ret i32 %43
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
